# riskradar

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEX_HANDOFF_v0_8_2.md  CODEX_TASK.md  Dockerfile  HOTFIX_TEST_FAILURE.txt  MIGRATION_v0_7_2_to_v0_7_3.md  MIGRATION_v0_7_3_to_v0_7_4.md  MIGRATION_v0_7_4_to_v0_8_0.md  MIGRATION_v0_8_0_to_v0_8_1.md  PROJECT_STATE.md  README.md  app.py  pyproject.toml  pytest-output.txt  requirements.txt  run_refresh.py
.github/: pull_request_template.md
docs/: MIGRATION_v0_3_to_v0_4.md  MIGRATION_v0_4_0_to_v0_4_1.md  MIGRATION_v0_4_1_to_v0_4_2.md  MIGRATION_v0_4_2_to_v0_4_3.md  MIGRATION_v0_4_3_to_v0_4_4.md  MIGRATION_v0_4_4_to_v0_4_5.md  MIGRATION_v0_4_6_to_v0_4_7.md  MIGRATION_v0_4_7_to_v0_4_8.md  MIGRATION_v0_4_8_to_v0_4_9.md  MIGRATION_v0_4_9_to_v0_5_0.md  MIGRATION_v0_5_0_to_v0_5_1.md  MIGRATION_v0_5_1_to_v0_6_0.md  MIGRATION_v0_6_0_to_v0_6_1.md  MIGRATION_v0_6_1_to_v0_6_2.md  MIGRATION_v0_6_2_to_v0_7_0.md  MIGRATION_v0_7_0_to_v0_7_1.md  MIGRATION_v0_7_0_wording_patch.md  MIGRATION_v0_7_1_to_v0_7_2.md
scripts/: apply_v0_8_3_hotfix.py  apply_v0_8_4_restore.py  fix_v0_8_3_test_expectation.py
tests/: synth.py  test_aux_integration_v0_4.py  test_aux_v0_4.py  test_axis_v0_4.py  test_conditional_branches_v0_4_4.py  test_core.py  test_credit_rate_depth.py  test_indicator_detail_view_v0_4_2.py  test_interpretation_cards.py  test_interpretation_v0_4.py  test_io.py  test_plain_language_v0_4_5.py  test_plain_language_v0_4_6.py  test_release_consistency.py  test_state_guidance_v0_4_4.py  test_today_view_v0_4.py  test_ui_language_v0_4_1.py  (+21 more)
(+51 files in other folders)
