[project]
name = "riskradar"
version = "0.6.1"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0", "numpy>=1.24", "pyarrow>=14", "requests>=2.31",
  "huggingface_hub>=0.23",
]

[project.optional-dependencies]
ui = ["gradio>=4.44", "fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
